# gus

./: .gitignore  Cargo.toml  LICENSE  README.md  data.json.gus  include_view.rs
.github/workflows/: rust.yml
models/: array_pk.json  invalid_pk.json  movie.json  pk_not_required.json
react_app/: .env  package-lock.json  package.json
react_app/public/: graphql-gui.html
react_app/src/: App.test.tsx  App.tsx
react_app/view_files/: index.html
react_app/view_files/view/: asset-manifest.json
react_app/view_files/view/static/js/: main.9bea5f2e.js  main.9bea5f2e.js.map
src/: cli.rs  main.rs  model.rs
src/cli/: index.rs  server.rs
src/cli/server/: build_view.rs  graphql.rs  model.rs  view.rs
src/cli/server/model/: graphql.rs  handler.rs  model_cli.rs  storage_handler.rs  types.rs
src/cli/server/model/storage_handler/: json.rs
src/cli/server/model/storage_handler/json/: json_cli.rs  mod.rs
src/cli/server/test_models/: array_pk.json  dup1.json  invalid_pk.json  invalid_storage.json  movie.json  multivalued_array.json  pk_not_required.json  required_attr_doesnt_exist.json
src/cli/server/view/: asset-manifest.json  index.html
src/cli/server/view/static/js/: main.12601ed4.js  main.12601ed4.js.map
src/cli/server/view_files/: index.html
src/cli/server/view_files/view/: asset-manifest.json  manifest.json
src/cli/server/view_files/view/static/js/: main.12601ed4.js  main.12601ed4.js.map
src/model/: types.rs
src/test_models/: invalid_pk.json
testing/model/: array_pk.json  dup2.json  inflection_dup1.json  inflection_dup2.json  inflection_no_plural_variant.json  movie.json
testing/server/: movie.json  server.data.test.json  storages.json
