[package]
name = "gus"
version = "0.1.0"
edition = "2021"
description = "A generic solution for setting up a REST-ful webserver with a database backend"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.3", features = ["derive"] }
serde = "1.0.188"
serde_derive = "1.0.188"
serde_json = "1.0.106"
