[package]
name = "gus"
version = "0.1.0"
edition = "2021"
authors =  ["Franz-Eric Sill"]
description = "A generic solution for setting up a REST-ful webserver with a database backend"
build = "./src/cli/server/build_view.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
clap = { version = "4.4.3", features = ["derive"] }
dialoguer = "0.10.4"
futures = "0.3.28"
regex = "1.9.5"
serde = "1.0.188"
serde_derive = "1.0.188"
serde_json = "1.0.106"
