[package]
name = "gus"
version = "0.1.0"
edition = "2021"
authors =  ["Franz-Eric Sill"]
description = "A general solution for setting up a REST-ful webserver with a database backend"
build = "./src/cli/server/build_view.rs"
exclude = ["./react_app/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
#apollo-compiler = "0.11.3"
apollo-compiler = { git = "https://github.com/apollographql/apollo-rs.git", branch = "main" }
clap = { version = "4.4.3", features = ["derive"] }
cruet = "0.13.3"
dialoguer = "0.10.4"
regex = "1.9.5"
serde = "1.0.188"
serde_derive = "1.0.188"
serde_json = "1.0.106"
